# util123

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  bun.lockb  package.json  tailwind.config.ts  tailwind.css  tsconfig.json
@bin/: build-assets.ts  build-scripts.ts  build-styles.ts  build.ts  dev.ts
@jsx/: jsx-runtime.ts
jetpack/rust/functions/: create_sha256_hash.rs  mod.rs
jetpack/rust/html/: map_children.rs  mod.rs
jetpack/rust/http/: create_etag.rs  get_file_mime.rs  get_is_etag_not_modified.rs
jetpack/typescript/functions/: send-hx-response.ts
jetpack/typescript/jsx/: jsx-dev-runtime.ts  render.ts  types.ts
src/client/: app.ts  auto-reload.ts  global.d.ts
src/client/components/: base64.ts  copy.ts  gzip.ts  qrcode.ts  sha.ts
src/client/functions/: copy-text.ts  listen-custom-event.ts  notify.ts  parse-hx-query.ts  sha.ts
src/client/types/: htmx.ts
src/client/views/: doc.ts  heading.ts  icon.tsx  qrcode.ts  qrcode.tsx  topbar.ts  utility-list.ts
src/server/: main.rs
src/server/functions/: create_etag.rs  create_etag_response.rs  create_hash.rs  get_asset_hashmap.rs  get_asset_map.rs  get_asset_path.rs  get_file_extension.rs  get_file_mime.rs  get_is_fragment_rendering.rs  get_is_same_asset_hash.rs  get_request_header_string_value.rs  is_not_modified.rs  map.rs  mod.rs  send_html_fragment_response.rs  send_html_response.rs
src/server/routes/: asset.rs  get_asset.rs  get_base64_page.rs  get_home_page.rs  get_public.rs  get_qrcode_page.rs  get_sha_page.rs  get_util_page.rs  home.rs  mod.rs  public.rs  util.rs
src/server/structs/: app_state.rs
src/server/views/: debug_scripts.rs  (+7 more)
views/: tsconfig.json
views/templates/: doc.tsx  heading.tsx  qrcode.tsx  topbar.tsx  utility-list.tsx
(+66 files in other folders)
