[package]
name = "util123"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "util123"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
html-to-string-macro = "0.2.5"
jetpack = { git = "https://github.com/wirunekaewjai/jetpack.git", rev = "ab2401df8ee26c6f4abca6bf1f3aed9927046e10" }
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"